<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity names and other high level strings -->
    <string name="app_name">LF Assistant</string>
    <string name="hello_world">Not yet implemented</string>
    <string name="films_list_title">Films</string>
    <string name="lenses_list_title">Lenses</string>
    <string name="filters_list_title">Filters</string>
    <string name="meters_list_title">Meters</string>
    <string name="cameras_list_title">Cameras</string>
    <string name="other_list_title">Other</string>
    <string name="shots_list_title">Shots</string>

    <string name="title_activity_camera_list">Cameras</string>
    <string name="title_activity_camera_add_edit">Add or edit a camera</string>
    <string name="title_activity_lens_list">Lenses</string>
    <string name="title_activity_lens_add_edit">Add or edit a lens</string>
    <string name="title_activity_film_list">Films</string>
    <string name="title_activity_film_add_edit">Add or edit a film</string>
    <string name="title_activity_filter_list">Filters</string>
    <string name="title_activity_filter_add_edit">Add or edit a filter</string>
    <string name="title_activity_meter_list">Meters</string>
    <string name="title_activity_meter_add_edit">Add or edit a meter</string>
    <string name="title_fxf_choose_film">Choose a film</string>
    <string name="title_fxf_filterlist">Filters matching your film</string>
    <string name="title_fxf_set_custom_ff">Set custom FF</string>
    <string name="title_activity_shot_list">Shots</string>
    <string name="title_activity_shot_detail">About this shot</string>

    <!-- Widget field names -->
    <string name="main_choose_film">Film</string>
    <string name="main_choose_lens">Lens</string>
    <string name="main_choose_aperture">f/</string>
    <string name="main_choose_filter">Filter</string>
    <string name="main_choose_be">Bellows</string>
    <string name="main_zonesystem">Zone System</string>
    <string name="main_choose_meter">Meter</string>
    <string name="main_choose_meter_read">Meter EV</string>
    <string name="main_choose_camera">Camera</string>
    <string name="main_default_gear">Default gear</string>
    <string name="main_calculated_exposure">Exposure: </string>
    <string name="main_user_choices">Your choices:</string>
    <string name="main_comment">Comment</string>
    <string name="main_holder">Holder ID:</string>

    <string name="equipment_choose_page">Edit gear</string>
    <string name="name">Name</string>
    <string name="film_name">Film name</string>
    <string name="film_ei">EI</string>
    <string name="film_type">Type</string>
    <string name="rec_corr">Reciprocity correction</string>
    <string name="rc1_label">1s</string>
    <string name="rc2_label">2s</string>
    <string name="rc3_label">5s</string>
    <string name="rc4_label">10s</string>
    <string name="rc5_label">30s</string>
    <string name="rc6_label">60s</string>
    <string name="rc7_label">100s</string>
    <string name="rc8_label">2s</string>
    <string name="lens_name">Lens name</string>
    <string name="lens_brand">Brand</string>
    <string name="lens_focal">Focal length (mm)</string>
    <string name="lens_filter_diameter">Filter diam. (mm)</string>
    <string name="aperture">Aperture</string>
    <string name="aperture_open">wide open (f/)</string>
    <string name="aperture_closed">closed (f/)</string>
    <string name="filter_name">Filter name</string>
    <string name="filter_brand">Brand</string>
    <string name="filter_matches_film_types">Films to use with:</string>
    <string name="filter_film_bw">bw</string>
    <string name="filter_film_color">color</string>
    <string name="filter_factors_generic">Filter factors (generic)</string>
    <string name="filter_factors_specific">Filter factors</string>
    <string name="camera_name">Camera</string>
    <string name="bellows_extension">Bellows extension</string>
    <string name="bellows_extension_min">min</string>
    <string name="bellows_extension_max">max</string>
    <string name="meter_name">Meter name</string>
    <string name="meter_results_format">Meter results</string>
    <string name="meter_iso">ISO</string>
    <string name="meter_compensation">Compensation</string>

    <string name="filter_factors">Filter factors</string>
    <string name="filter_factors_button">Edit</string>


    <!-- Film-x-Filter labels -->
    <string name="film_to_match">Film</string>
    <string name="filter_to_match">Filter</string>
    <string name="is_filter_for_bw">BW?</string>
    <string name="is_filter_for_color">Color?</string>
    <string name="filter_factor">Filter factor</string>


    <!-- Hints -->
    <string name="hint_film_name">Dummy</string>
    <string name="hint_film_type">slide</string>
    <string name="hint_ei">100</string>
    <string name="hint_rc1">1.26</string>
    <string name="hint_rc2">1.26</string>
    <string name="hint_rc3">1.3</string>
    <string name="hint_rc4">1.4</string>
    <string name="hint_rc5">1.4</string>
    <string name="hint_rc6">1.58</string>
    <string name="hint_rc7">2.00</string>
    <string name="hint_lens_nickname">135</string>
    <string name="hint_lens_brand">Rodenstock</string>
    <string name="hint_lens_focal">135</string>
    <string name="hint_lens_filter_dia">52</string>
    <string name="hint_camera_name">Tachihara</string>
    <string name="hint_be_min">65</string>
    <string name="hint_be_max">330</string>
    <string name="hint_filter_name">#11</string>
    <string name="hint_ff_bw">1</string>
    <string name="hint_ff_color">1</string>
    <string name="hint_meter_name">Pentax</string>
    <string name="hint_meter_iso">200</string>
    <string name="hint_meter_compensation">+0.67</string>

    <!-- Menu Actions -->
    <string name="action_add_new">Add new</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>

    <string name="action_add_film">Add film</string>
    <string name="action_save_film">Save film</string>
    <string name="action_discard_film">Delete film</string>
    <string name="action_add_lens">Add lens</string>
    <string name="action_save_lens">Save lens</string>
    <string name="action_discard_lens">Delete lens</string>
    <string name="action_add_camera">Add camera</string>
    <string name="action_save_camera">Save camera</string>
    <string name="action_discard_camera">Delete camera</string>
    <string name="action_add_filter">Add camera</string>
    <string name="action_save_filter">Save camera</string>
    <string name="action_discard_filter">Delete camera</string>
    <string name="action_calculate_exposure">Calculate exposure</string>
    <string name="action_send_data">Email data now</string>
    <string name="action_save_shot">Save shot</string>
    <string name="action_discard_shot">Delete Shot</string>

    <!-- Dialogs and toasts -->

    <string name="dialog_delete">Really delete?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="warning_empty_field">Fields cannot be left blank; default provided.
        \nCheck values again!</string>

    <string name="added">You added a new item!</string>
    <string name="saved">Saved</string>
    <string name="deleted">Deleted</string>

    <string name="film_added">You added a new film!</string>
    <string name="film_saved">Film saved</string>
    <string name="film_deleted">Film deleted</string>
    <string name="camera_added">You added a new camera!</string>
    <string name="camera_saved">Camera saved</string>
    <string name="camera_deleted">Camera deleted</string>
    <string name="filter_added">You added a new filter!</string>
    <string name="filter_saved">Filter saved</string>
    <string name="filter_deleted">Filter deleted</string>

    <string name="dialog_delete_film">Really delete?</string>

    <!-- Miscellanea and newly added -->

    <string name="default_fstop">11</string>
    <string name="default_ev">10</string>
    <string name="default_zone_system">N</string>
    <string name="default_holder">1</string>
    <string name="email_address">lvaszar@gmail.com</string>
    <string name="file_to_email">lfdb_backup.sqlite</string>
    <string name="one_third">&#8531;</string>
    <string name="two_thirds">&#8532;</string>
    <string name="one_third_down">&#8531; down</string>
    <string name="one_third_up">&#8531; up</string>
    <string name="shutter">shutter</string>
    <string name="blank"></string>
    <string name="footer">This here be footer</string>


    <!-- Shot details-->




</resources>
