<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/film_name"/>

            <EditText
                android:id="@+id/editTextFilmName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:hint="@string/film_name"
                android:maxLength="20"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/film_type"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="left"/>
        </TableRow>


        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/film_ei"
                />

            <EditText
                android:id="@+id/editTextFilmEi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ei"
                android:inputType="number"
                android:maxLength="10"/>
        </TableRow>
<!--
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/filter_factors"/>

            <Button
                android:id="@+id/button_filmxfilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/filter_factors_button"
                android:onClick="openListMatchingFilters"/>
        </TableRow>
        -->

        <TableRow>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="10dp"
                android:text="@string/rec_corr"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/rc1_label"/>

            <EditText
                android:id="@+id/editTextRC1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_rc1"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/rc2_label"/>

            <EditText
                android:id="@+id/editTextRC2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_rc2"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/rc3_label"/>

            <EditText
                android:id="@+id/editTextRC3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_rc3"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/rc4_label"/>

            <EditText
                android:id="@+id/editTextRC4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_rc4"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/rc5_label"/>

            <EditText
                android:id="@+id/editTextRC5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_rc5"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/rc6_label"/>

            <EditText
                android:id="@+id/editTextRC6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_rc6"
                android:inputType="numberDecimal"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/rc7_label"/>

            <EditText
                android:id="@+id/editTextRC7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_rc7"
                android:inputType="numberDecimal"/>
        </TableRow>


    </TableLayout>
</LinearLayout>


