<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow>
            <TextView
                android:text="@string/camera_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextCameraName"
                android:layout_column="1"
                android:maxLength="20"
                android:hint="@string/camera_name"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/bellows_extension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_column="1"
                style="?android:listSeparatorTextViewStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/bellows_extension_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_column="0" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editTextBEmin"
                android:hint="@string/hint_be_min"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/bellows_extension_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_column="0" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editTextBEmax"
                android:hint="@string/hint_be_max"/>
        </TableRow>
    </TableLayout>
</LinearLayout>


