<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <!-- Delete, should appear as action button -->
    <item android:id="@+id/action_discard_camera"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/action_discard_camera"
          android:showAsAction="ifRoom" />
    <!-- Save, should appear as action button -->
    <item android:id="@+id/action_save_camera"
          android:icon="@drawable/ic_action_save"
          android:title="@string/action_save_camera"
          android:showAsAction="ifRoom" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />

</menu>