<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow>
            <TextView
                android:text="@string/filter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextFilterName"
                android:layout_column="1"
                android:maxLength="20"
                android:hint="@string/filter_name"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/filter_matches_film_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_column="0" />
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    android:text="@string/filter_film_bw"
                    android:id="@+id/checkBoxBw"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/filter_film_color"
                    android:id="@+id/checkBoxColor"/>
            </LinearLayout>


        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/filter_factors_generic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_column="1"
                style="?android:listSeparatorTextViewStyle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/filter_film_bw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_column="0" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editTextFFbw"
                android:hint="@string/hint_ff_bw"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/filter_film_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_column="0" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editTextFFcolor"
                android:hint="@string/hint_ff_color"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/filter_factors_specific"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_column="1"
                style="?android:listSeparatorTextViewStyle"/>
        </TableRow>
    </TableLayout>
</LinearLayout>


